--- a/references.bib
+++ b/references.bib
@@ -107,9 +107,11 @@
  journal={arXiv preprint arXiv:1211.5063},
  year={2012}
 }
-@article{shoutemporal,
- title={Temporal Action Localization in Untrimmed Videos via Multi-stage CNNs},
- author={Shou, Zheng and Wang, Dongang and Chang, Shih-Fu}
+@inproceedings{scnn_shou_wang_chang_cvpr16,
+  author = {Zheng Shou and Dongang Wang and Shih-Fu Chang},
+  title = {Temporal Action Localization in Untrimmed Videos via Multi-stage CNNs},
+  year = {2016},
+  booktitle = {CVPR}
 }
 @Article{Simonyan14c,
    author       = "Simonyan, K. and Zisserman, A.",
