--- a/paper.tex
+++ b/paper.tex
@@ -260,9 +260,9 @@ In the Figure~\ref{fig:example_results} is shown some examples of the temporal l
 \section{Conclusion}
 
 We propose a simple pipeline which can be able to perform well in classification and temporal localization on activities on videos.
-Moreover, the flexibility of this sequence to sequence prediction allows the proposed network to face tasks where more than a single activity is present in the video.
+Moreover, the flexibility of this network performing a sequence to sequence prediction allows it to face tasks where more than a single activity is present in the video.
 
-% ALBERTO: que més explico a les conclusions
+% ALBERTO: que més explico a les conclusions???
 
 In the future, we would like to extend the work training all the pipeline end-to-end, including the C3D and improve the accuracy obtained.
 
