--- a/paper.tex
+++ b/paper.tex
@@ -84,7 +84,7 @@ Recognizing activities in videos has become a hot topic over the last years due 
 This large amount of data requires an automatic indexing to be accessed after capture.
 The recent advances in video coding, storage and computational resources have boosted research in the field towards new and more efficient solutions for organizing and retrieving video content.
 
-Impressive progress has been reported in the recent literature for video classification~\cite{tran2014learning,tran2015deep,wang2015towards,yao2015describing}, which requires to assign a label for the input video. While this task is already challenging, it has typically been explored with videos to be trimmed beforehand (i.e. the category is present in the entire video).
+Impressive progress has been reported in the recent literature for video classification~\cite{tran2014learning,tran2015deep,wang2015towards,yao2015describing}, which requires to assign a label for the input video. While this task is already challenging, it has typically been explored with videos to be trimmed beforehand.
 However, a video classification system should be able to recognize activities in untrimmed videos, and find the temporal segments in which they appear.
 This second challenge has been recently proposed in the ActivityNet Challenge 2016~\cite{caba2015activitynet}, in which participants are asked to both provide a single activity for each video, as well as the temporal segment where the activity happened in the video.
 % AMAIA: Amb això et refereixes que la tasca de detecció temporal es nova d'Activitynet? Ho he modificat una mica... No queda massa clar... Si és així, jo directament mencionaria la challenge i la citaria.
@@ -97,13 +97,14 @@ In order to face both these challenges at the same time, we propose a simple pip
 % AMAIA: El related work dels datasets me'l saltaria per guanyar espai. L'he comentat.
 
 %The activity classification and temporal localization tasks have been proposed with datasets such as Sports1M~\cite{KarpathyCVPR14}, THUMOS~\cite{THUMOS15} or ActivityNet~\cite{caba2015activitynet} published in the recents years. Many frameworks have been proposed to solve this tasks.
-Several works in the literature have used 2D-CNNs to exploit the spatial correlations between frames of a video by combining their outputs using different strategies~\cite{gkioxari2015contextual,yeung2015end,ballas2015delving}. Others have tried using the optical flow as an additional input to the 2D-CNN videos~\cite{wang2015towards}, which provides information of the temporal correlations. % AMAIA: Tot això s'ha de revisar...
+Several works in the literature have used 2D-CNNs to exploit the spatial correlations between frames of a video by combining their outputs using different strategies~\cite{gkioxari2015contextual,yeung2015end,ballas2015delving}. Others have tried using the optical flow as an additional input to the 2D-CNNN~\cite{wang2015towards}, which provides information of the temporal correlations. % AMAIA: Tot això s'ha de revisar...
 
 Later on, 3D-CNNs were proposed in~\cite{tran2014learning} (known as C3D), which were able to exploit short temporal correlations between frames and have demonstrated to work remarkably well for video classification~\cite{tran2014learning,tran2015deep}. C3D have also been used for temporal detection in~\cite{scnn_shou_wang_chang_cvpr16}, where multi-stage C3D architecture is used to classify video segment proposals.
 
 For temporal activity detection, recent works have proposed the usage of Long Short-Term Memory units (LSTM)~\cite{hochreiter1997long}.
-LSTMs are a type of RNNs that is able to better exploit long and short temporal correlations in sequences, which makes them suitable for video applications.
-LSTMs have been used alongside CNNs for video classification~\cite{yao2015describing} and activity localization in videos~\cite{yeung2015every}.
+LSTMs are a type of RNNs that are able to better exploit long and short temporal correlations in sequences, which makes them suitable for video applications.
+LSTMs have been used alongside CNNs for video classification~\cite{yao2015describing} and activity localization in videos~\cite{yeung2015every}. 
+Our proposed network is inspired by this solutions using the C3D that so well perform in video, and also a RNN which will exploit long temporal correlations and allows to predict a sequence.
 
 % AMAIA: Aquí falta una frase que digui què fem diferent nosaltres, en què ens assemblem a l'estat de l'art...
 
@@ -122,9 +123,10 @@ We use the C3D model proposed in~\cite{tran2014learning} to extract features for
 %All 3D pooling layers use a 2$\times$2 max pooling with stride 2 in spatial dimensions, the same kernel size as in the temporal dimension except the first pooling layer (\texttt{pool1}) which has kernel size 1 and stride 1. All 3D convolutional filters have kernel size 3 and stride 1 in all dimensions.
 %The network architecture used is the same as in the original paper except that it has been decided to work on the next stage with the values obtained at the \texttt{fc6} layer as feature vector for each 16-frame clip. The specifications of the network layers as well as the number of kernels by layer is the following one: \texttt{conv1(64) - pool1 - conv2a(128) - pool2 - conv3a(256) - conv3b(256) - pool3 - conv4a(512) - conv4b(512) - pool4 - conv5a(512) - conv5b(512) - pool(5) - fc6(4096)}.
 
-\subsection{Recurrent Neural Network}
+\subsection{Architecture}
 \label{sec:architecture}
-We design a network that processes a sequence of C3D-f6 features from a video, and returns a sequence of class probabilities for each 16-frames clip. We use LSTM layers, trained with dropout with $p = 0.5$ and a fully connected layer with a softmax activation. Figure~\ref{fig:global_pipeline} shows the proposed architecture. Different configurations of the number of LSTM layers $N$ and the number of cells $c$ have been tested and are compared in Section~\ref{sec:resultats}. The recurrent network have the following architecture: \texttt{input(4096) - dropout(.5) - N $\times$ lstm(c) - dropout(.5) - softmax(K+1)} where $K$ is the number of activity classes at the dataset.
+We design a network that processes a sequence of C3D-f6 features from a video, and returns a sequence of class probabilities for each 16-frames clip. 
+We use LSTM layers, trained with dropout with $p = 0.5$ and a fully connected layer with a softmax activation. Figure~\ref{fig:global_pipeline} shows the proposed architecture. Different configurations of the number of LSTM layers $N$ and the number of cells $c$ have been tested and are compared in Section~\ref{sec:resultats}. Our proposed system has the following architecture: \texttt{input(4096) - dropout(0.5) - N $\times$ lstm(c) - dropout(.5) - softmax(K+1)} where $K$ is the number of activity classes at the dataset.
 
 \begin{figure}[ht]
 \centering
@@ -191,8 +193,7 @@ We train the network described in Section~\ref{sec:architecture} with the negati
 
 where $q$ is the predicted probability distribution and $p$ the ground truth probability distribution. In our experiments, we set $\rho = 0.3$.
 
-The network was trained with batches of 256 samples, back-propagating the error during 20 time-steps per sample.
-The optimizer function used was the RMSprop~\cite{dauphin2015rmsprop} with a learning rate set to $10^{-5}$. In total the network was trained with 100 epochs.
+The network was trained for 100 epochs, with a batch size of 256, where each sample in the minibatch is a sequence of 20 16-frame video clips. We use RMSprop~\cite{dauphin2015rmsprop} with a learning rate set to $10^{-5}$.
 
 % AMAIA: Aquí tambe hauries d'afegir el numero de iteracions (o epochs), learning rate, optimizer, batch size. Si el tens, el temps d'entrenament en la GPU que entrenessis.
 % ALBERTO: FET
@@ -201,8 +202,7 @@ The optimizer function used was the RMSprop~\cite{dauphin2015rmsprop} with a lea
 \subsection{Results}
 \label{sec:resultats}
 
-The evaluation metric follows the one used in ActivityNet Challenge with regard to classification and temporal activity localization as a retrieval problem, evaluating the mAP.
-For temporal localization, a prediction is marked correct only when it has the correct category and has IoU with ground truth instance larger than $0.5$.
+We evaluate our methods with the mean average precision (mAP), which is the metric used in ActivityNet Challenge with regard to classification and temporal activity localization as a retrieval problem. For temporal localization, a prediction is marked correct only when it has the correct category and has IoU with ground truth instance larger than $0.5$.
 
 \begin{table}[h]
     \parbox{.45\linewidth}{
@@ -234,14 +234,11 @@ For temporal localization, a prediction is marked correct only when it has the c
     }
 \end{table}
 
-The first results are related with the network architecture. It has been tested with different number of layers and different number of cells having all the layers the same number of cells. The results can be found in Table~\ref{table:classification_by_architecture}.
-This results indicate that all the networks presented high learning capacity over the data, but a little over-fitting was observed with the deeper architectures, obtainng the best results with a single layer of 512-LSTM cells.
+Results in Table~\ref{table:classification_by_architecture} show the performance of different network configurations. We experimented with different number of LSTM layers and different number of cells. These results indicate that all the networks presented high learning capacity over the data, but over-fitting was observed with the deeper architectures, obtaining the best results with a single layer of 512-LSTM cells.
 
 Once the architecture has been chosen to obtain the best performance in the classification task, some experiments with different values of $k$ and $\gamma$ for the post-processing were performed.
-At Table~\ref{table:detection_postprocessing_comparison} there are the results for the temporal activity localization task, where the effect of a mean smoothing filter can be seen, improving the localization.
-%there is the results for the temporal activity localization task, where can be seen that the effect of a mean filter to smooth helps improving the localization.
-
-In the Figure~\ref{fig:example_results} is shown some examples of the temporal localization prediction for some instances of the dataset. It can be seen how the predictions are continuous and smooth and mostly overlaps with the ground truth instances.
+Table~\ref{table:detection_postprocessing_comparison} shows results for the temporal activity localization task, where the effect of a mean smoothing filter can be seen, improving the localization. Figure~\ref{fig:example_results} shows some examples of the temporal localization prediction for some instances of the dataset. It can be seen how the predictions are continuous and smooth.
+% AMAIA: No sé si els exemples de la figura son els millors...no en tens algun on la detecció estigui bé pero la classe no? o al reves? No en vas posar algun a la presentacio de la defensa?
 
 \begin{figure}[ht]
 \centering
@@ -259,12 +256,10 @@ In the Figure~\ref{fig:example_results} is shown some examples of the temporal l
 % ALBERTO: crec que potser una segona figura no hi cab...posar-la a annexes potser???
 \section{Conclusion}
 
-We propose a simple pipeline which can be able to perform well in classification and temporal localization on activities on videos.
-Moreover, the flexibility of this network performing a sequence to sequence prediction allows it to face tasks where more than a single activity is present in the video.
+In this paper we propose a simple pipeline for both classification and temporal localization of activities in videos. Our system achieves competitive results on both tasks. The sequence to sequence nature of the proposed network offers flexibility to extend it to face more challenging tasks in video processing, e.g. where more than a single activity is present in the video. Future work will address end to end training of the model (3D-CNN + RNN), to learn better feature representations suitable for the dataset.
 
 % ALBERTO: que més explico a les conclusions???
 
-In the future, we would like to extend the work training all the pipeline end-to-end, including the C3D and improve the accuracy obtained.
 
 \section*{}
 {\small
