Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -241,7 +241,7 @@ Table~\ref{table:classification_by_architecture} shows the performance of differ
 
 Fixing the architecture, we performed experiments for the temporal detection task using different values of $k$ and $\gamma$ in the post-processing stage.
 Table~\ref{table:detection_postprocessing_comparison} shows results for the temporal activity localization task, where the effect of a mean smoothing filter can be seen, improving the localization performance.
-Figures~\ref{fig:example_results_detect} and~\ref{fig:example_results_classification} shows some examples of classification and temporal localization prediction for some instances of the dataset, showing continuous and smooth segments.
+Figures~\ref{fig:example_results_detect} and~\ref{fig:example_results_classification} show some examples of classification and temporal localization prediction for some instances of the dataset.
 % AMAIA: No sé si els exemples de la figura son els millors...no en tens algun on la detecció estigui bé pero la classe no? o al reves? No en vas posar algun a la presentacio de la defensa?
 % ALBERTO: Ja he ficat un exemple que passa el que tu dius
 % AMAIA: Vist
