Add more figure

--- a/paper.tex
+++ b/paper.tex
@@ -257,20 +257,28 @@ Figures~\ref{fig:example_results_detect} and~\ref{fig:example_results_classifica
 
 \begin{figure}[h]
 \centering
-\begin{subfigure}[b]{.4\textwidth}
-  \texttt{Video ID: ArzhjEk4j\_Y \\
-  Activity: Building sandcastles \\
-  \\
-  Prediction: \\
-  0.7896	Building sandcastles \\
-  0.0073	Doing motocross \\
-  0.0049	Beach soccer \\}
+\begin{subfigure}[b]{.5\textwidth}
+    \includegraphics[width=0.9\linewidth]{img/results_visualization_classification_1}
+    \texttt{Video ID: ArzhjEk4j\_Y \\
+    Ground Truth: Building sandcastles \\
+    \\
+    Prediction: \\
+    0.7896	Building sandcastles \\
+    0.0073	Doing motocross \\
+    0.0049	Beach soccer \\}
 \end{subfigure}%
-\begin{subfigure}[b]{.6\textwidth}
-  \centering
-\includegraphics[width=0.95\linewidth]{img/results_visualization_classification_1}
+\begin{subfigure}[b]{.5\textwidth}
+    \includegraphics[width=0.9\linewidth]{img/results_visualization_classification_4}
+    \texttt{Video ID: VrNHEv6aR38 \\
+    Ground Truth: Playing water polo \\
+    \\
+    Prediction: \\
+    0.7645	Playing water polo \\
+    0.2018	Swimming \\
+    0.0065	Springboard diving\\}
 \end{subfigure}
-\caption{Example of activity classification.}
+
+\caption{Examples of activity classification.}
 \label{fig:example_results_classification}
 \end{figure}
 
