--- a/paper.tex
+++ b/paper.tex
@@ -268,14 +268,14 @@ Figures~\ref{fig:example_results_detect} and~\ref{fig:example_results_classifica
     0.0049	Beach soccer \\}
 \end{subfigure}%
 \begin{subfigure}[b]{.5\textwidth}
-    \includegraphics[width=0.9\linewidth]{img/results_visualization_classification_4}
-    \texttt{Video ID: VrNHEv6aR38 \\
-    Ground Truth: Playing water polo \\
+    \includegraphics[width=0.9\linewidth]{img/results_visualization_classification_2}
+    \texttt{Video ID: AimG8xzchfI \\
+	Activity: Curling \\
     \\
     Prediction: \\
-    0.7645	Playing water polo \\
-    0.2018	Swimming \\
-    0.0065	Springboard diving\\}
+    0.3843	Shoveling snow \\
+    0.1181	Ice fishing \\
+    0.0633	Waterskiing \\}
 \end{subfigure}
 
 \caption{Examples of activity classification.}
